// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestForm Component renders form 1`] = `
<div>
  <form>
    <Panel.Section>
      <p>
        <strong>
          Please note this process may take up to 2 business days.
        </strong>
      </p>
      <Field
        component={[Function]}
        disabled={false}
        errorInLabel={true}
        label="Daily Limit"
        name="dailyLimit"
        required={true}
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={false}
        errorInLabel={true}
        label="Reason for Increase?"
        multiline={true}
        name="reason"
        required={true}
        resize="none"
        rows={4}
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Request Limit Increase
      </Button>
      <Button
        disabled={false}
        onClick={[MockFunction]}
        size="default"
      >
        Close
      </Button>
    </Panel.Section>
  </form>
</div>
`;

exports[`RequestForm Component submit is disabled when submitting 1`] = `
<div>
  <form>
    <Panel.Section>
      <p>
        <strong>
          Please note this process may take up to 2 business days.
        </strong>
      </p>
      <Field
        component={[Function]}
        disabled={true}
        errorInLabel={true}
        label="Daily Limit"
        name="dailyLimit"
        required={true}
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={true}
        errorInLabel={true}
        label="Reason for Increase?"
        multiline={true}
        name="reason"
        required={true}
        resize="none"
        rows={4}
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        submit={true}
      >
        Submitting
      </Button>
      <Button
        disabled={true}
        onClick={[MockFunction]}
        size="default"
      >
        Close
      </Button>
    </Panel.Section>
  </form>
</div>
`;

exports[`RequestForm Component submit is enabled when form is valid 1`] = `
<div>
  <form>
    <Panel.Section>
      <p>
        <strong>
          Please note this process may take up to 2 business days.
        </strong>
      </p>
      <Field
        component={[Function]}
        disabled={false}
        errorInLabel={true}
        label="Daily Limit"
        name="dailyLimit"
        required={true}
        validate={
          Array [
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Field
        component={[Function]}
        disabled={false}
        errorInLabel={true}
        label="Reason for Increase?"
        multiline={true}
        name="reason"
        required={true}
        resize="none"
        rows={4}
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={false}
        primary={true}
        size="default"
        submit={true}
      >
        Request Limit Increase
      </Button>
      <Button
        disabled={false}
        onClick={[MockFunction]}
        size="default"
      >
        Close
      </Button>
    </Panel.Section>
  </form>
</div>
`;
